# study_FastAPI

./: README.md  example_1.py  main.py  pyproject.toml  run.bat
FastAP/: .gitignore
static/: index.html
