[project]
name = "my_fastapi_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "aiortc>=1.13.0",
    "autoroot>=1.0.1",
    "autorootcwd>=1.0.1",
    "av>=14.4.0",
    "fastapi[all]>=0.116.1",
    "opencv-python-headless>=4.12.0.88",
    "ultralytics>=8.3.168",
    "uvicorn>=0.35.0",
]
